# cpp_plugin_example

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plugin_a.cpp  plugin_b.cpp  plugin_base.hpp  plugin_evil.cpp
